fix: resolve 500 error by preventing infinite recursion in Lombok methods